--- a/js/tests/index.html
+++ b/js/tests/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Bootstrap Plugin Test Suite</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="../../dist/css/bootstrap.min.css">
 
     <!-- jQuery -->
     <script src="../../docs/assets/js/vendor/jquery-slim.min.js"></script>
