--- a/js/tests/visual/carousel.html
+++ b/js/tests/visual/carousel.html
@@ -20,13 +20,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="http://i.imgur.com/iEZgY7Y.jpg" alt="First slide">
+            <img src="http://placehold.it/1110x400" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img src="http://i.imgur.com/eNWn1Xs.jpg" alt="Second slide">
+            <img src="http://placehold.it/1110x400" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img src="http://i.imgur.com/Nm7xoti.jpg" alt="Third slide">
+            <img src="http://placehold.it/1110x400" alt="Third slide">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carousel-example-generic" role="button" data-slide="prev">
