--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: home
 
 <div class="bd-featurette">
   <div class="container">
-    <h2 class="bd-featurette-title">Easy to get started</h2>
+    <h2 class="bd-featurette-title">Easy to get started 111</h2>
     <p class="lead">Quickly include Bootstrap's CSS and JS into any project. Use your favorite package manager, download the source, or use the Bootstrap CDN.</p>
 
     <div class="row text-center">
