Actualización de la pagina de inicio

--- a/index.html
+++ b/index.html
@@ -53,13 +53,12 @@
               <a class="navbar-brand" href="index.html">BAstrap</a>
             </div>
             <div class="collapse navbar-collapse" id="main-nav">
-              <ul class="nav navbar-nav navbar-right">
+              <!-- <ul class="nav navbar-nav navbar-right">
                 <li><a href="comenzar.html">Comenzar</a></li>
                 <li><a href="estilos.html">Estilos</a></li>
                 <li><a href="componentes.html">Componentes</a></li>
-                <!-- <li class="disabled"><a href="#">Lineamientos</a></li> -->
                 <li><a href="old/index.html" target="blank">BAstrap 0.5</a></li>
-              </ul>
+              </ul> -->
             </div>
           </div>
         </div>
@@ -69,11 +68,11 @@
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <h1>BAstrap</h1>
-          <p class="lead">La herramienta basada en <a href="http://getbootstrap.com/" target="_blank">Twitter Bootstrap</a> que permite unificar la interfaz de los sitios web del Gobierno de la Ciudad de Buenos Aires.</p>
+          <p class="lead">
+            Estos lineamientos están desactualizados, ingresá a la versión de Bastrap actualizada a partir de este link.
+          </p>
           <div class="col-md-8 col-md-offset-2">
-            <p><a href="comenzar.html" class="btn btn-primary btn-xl btn-block" role="button">Comenzar</a></p>
-            <p><a href="BAstrap3.zip" class="btn btn-default btn-lg btn-block" role="button">Descargar framework y ejemplos</a></p>
-            <p><a href="bastrap-uikit.zip" class="btn btn-default btn-lg btn-block" role="button">Descargar recursos de diseño</a></p>
+            <p><a href="https://gcba.github.io/BAstrap7/" class="btn btn-primary btn-xl btn-block" role="button">Comenzar</a></p>
           </div>
         </div>
       </div>
@@ -89,7 +88,7 @@
             </div>
             <div class="col-md-6 col-sm-6">
               <div class="sub-brand">
-                <p>Dirección General de Gobierno Electrónico<br />
+                <p>Dirección General de Gestión Digital<br/>
                 <span class="text-muted">Ministerio de Modernización</span></p>
               </div>
             </div>
