--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: home
 </main>
 
 <div class="masthead-followup row m-0 border border-white">
-  <div class="col-12 col-md-4 p-3 p-md-5 bg-light border border-white">
+  <div class="col-12 col-md-4 py-4 px-3 p-md-5 bg-light border border-white">
     <!-- Icon by Bytesize https://github.com/danklammer/bytesize-icons -->
     {% include icons/import.svg width="32" height="32" class="text-primary mb-2" %}
     <h3>Installation</h3>
@@ -47,11 +47,11 @@ gem install bootstrap -v 4.0.0.beta
 {% highlight sh %}
 bower install bootstrap#v{{ site.current_version }}
 {% endhighlight %}
-    <hr class="half-rule">
+    <hr class="mx-0 my-4 w-25">
     <a class="btn btn-outline-primary" href="{{ site.baseurl }}/docs/{{ site.docs_version }}/getting-started/download">Read installation docs</a>
   </div>
 
-  <div class="col-12 col-md-4 p-3 p-md-5 bg-light border border-white">
+  <div class="col-12 col-md-4 py-4 px-3 p-md-5 bg-light border border-white">
     <!-- Icon by Bytesize https://github.com/danklammer/bytesize-icons -->
     {% include icons/download.svg width="32" height="32" class="text-primary mb-2" %}
     <h3>Bootstrap CDN</h3>
@@ -68,11 +68,11 @@ bower install bootstrap#v{{ site.current_version }}
 <script src="{{ site.cdn.popper }}" integrity="{{ site.cdn.popper_hash }}" crossorigin="anonymous"></script>
 <script src="{{ site.cdn.js }}" integrity="{{ site.cdn.js_hash }}" crossorigin="anonymous"></script>
 {% endhighlight %}
-    <hr class="half-rule">
+    <hr class="mx-0 my-4 w-25">
     <a class="btn btn-outline-primary" href="{{ site.baseurl }}/docs/{{ site.docs_version }}/layout/overview/">Explore the docs</a>
   </div>
 
-  <div class="col-12 col-md-4 p-3 p-md-5 bg-light border border-white">
+  <div class="col-12 col-md-4 py-4 px-3 p-md-5 bg-light border border-white">
     <!-- Icon by Bytesize https://github.com/danklammer/bytesize-icons -->
     {% include icons/lightning.svg width="32" height="32" class="text-primary mb-2" %}
     <h3>Official Themes</h3>
@@ -80,7 +80,7 @@ bower install bootstrap#v{{ site.current_version }}
       Take Bootstrap 4 to the next level with official premium themes—toolkits built on Bootstrap with new components and plugins, docs, and build tools.
     </p>
     <img class="img-fluid mt-3 mx-auto" src="{{ site.baseurl }}/assets/img/bootstrap-themes.png" alt="Bootstrap Themes" width="1024" height="388">
-    <hr class="half-rule">
+    <hr class="mx-0 my-4 w-25">
     <a href="{{ site.themes }}" class="btn btn-outline-primary">Browse themes</a>
   </div>
 </div>
